<resources>
    <string name="app_name">YgoCardSearch</string>
    <string name="card_search_button_text">Card Search</string>
    <string name="life_point_button_text">Life Point Counter</string>

    <string name="hint_user_card_search">Type your card here…</string>
    <string name="start_search_text">Start Search</string>
    <string name="filter">Filter</string>
    <string name="main_card_type">Card Type:</string>
    <string name="monster_card">Monster Card</string>
    <string name="spell_card">Spell Card</string>
    <string name="trap_card">Trap Card</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="card_type">Card Type</string>
    <string name="spell_type">Spell Type:</string>
    <string name="trap_type">Trap Type:</string>
    <string name="card_rulings">Card Rulings</string>
    <string name="monster_type">Monster Type:</string>

    <string-array name="monster_type">
        <item>Type:</item>
        <item>Aqua</item>
        <item>Beast</item>
        <item>Beast-Warrior</item>
        <item>Creator-God</item>
        <item>Cyberse</item>
        <item>Dinosaur</item>
        <item>Divine-Beast</item>
        <item>Dragon</item>
        <item>Fairy</item>
        <item>Fiend</item>
        <item>Fish</item>
        <item>Insect</item>
        <item>Machine</item>
        <item>Plant</item>
        <item>Psychic</item>
        <item>Pyro</item>
        <item>Reptile</item>
        <item>Rock</item>
        <item>Sea Serpent</item>
        <item>Spellcaster</item>
        <item>Thunder</item>
        <item>Warrior</item>
        <item>Winged Beast</item>
    </string-array>

    <string-array name="monster_attribute">
        <item>Attribue:</item>
        <item>DARK</item>
        <item>DIVINE</item>
        <item>EARTH</item>
        <item>FIRE</item>
        <item>LIGHT</item>
        <item>WATER</item>
        <item>WIND</item>
    </string-array>

    <string-array name="spell_type">
        <item>None</item>
        <item>Normal</item>
        <item>Field</item>
        <item>Equip</item>
        <item>Continuous</item>
        <item>Quick-Play</item>
        <item>Ritual</item>
    </string-array>

    <string-array name="trap_type">
        <item>None</item>
        <item>Normal</item>
        <item>Continuous</item>
        <item>Counter</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_intro">Pot of Cards</string>
    <string name="no_search_text">Sad Kuriboh is sad because there were no results for the card you want, check your FILTERS or the card you TYPED.</string>
    <string name="re_download">Re-Download</string>
    <string name="attack_range_text">Attack Range:</string>
    <string name="to">TO</string>
    <string name="check_attack">Check Attack?</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="about_me">About Me</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="dont_know_text">Type in the card you wish to look for, or if you don\'t know the card name try to type in words you can remember about the card.</string>
    <string name="attribute_monster">Attribute: %1$s</string>
    <string name="type_monster">Type: %1$s</string>
    <string name="attack_monster">Attack: %1$s</string>
    <string name="defense_monster">Defense: %1$s</string>
    <string name="monster_level_rank">Level / Rank: %1$s</string>
    <string name="about_me_story">An android developer who enjoys playing card games if you didn\'t guess by now. I will continue working on this app and you will be able to see much more features than what is here now.
    This app was developed with a lot of desire and perseverance, I enjoyed designing and experimenting with the api and the challenges that came with it. If you want to know more about me
    below is my Github and LinkedIn, take a look and if you want to hire me just let me know.</string>
    <string name="checkout_my_github">Checkout my Github</string>
    <string name="checkout_my_linkedin">Checkout my LinkedIn</string>

</resources>
