<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".before_search_fragments.UserFilterFragment">

    <TextView
        android:id="@+id/user_filter_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_card_type"/>

    <CheckBox
        android:id="@+id/monster_card_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monster_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_filter_intro" />

    <CheckBox
        android:id="@+id/spell_card_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spell_card"
        app:layout_constraintStart_toEndOf="@id/monster_card_checkbox"
        app:layout_constraintTop_toBottomOf="@id/user_filter_intro" />

    <CheckBox
        android:id="@+id/trap_card_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trap_card"
        app:layout_constraintStart_toEndOf="@id/spell_card_checkbox"
        app:layout_constraintTop_toBottomOf="@id/user_filter_intro" />

    <TextView
        android:id="@+id/which_monster_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monster_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trap_card_checkbox"/>

    <Spinner
        android:id="@+id/monster_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/which_monster_type"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>

    <Spinner
        android:id="@+id/monster_attribute_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/monster_type_spinner"
        app:layout_constraintTop_toBottomOf="@id/which_monster_type">
    </Spinner>

    <CheckBox
        android:id="@+id/attack_value_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_attack"
        app:layout_constraintTop_toBottomOf="@id/monster_type_spinner"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/attack_min_and_max_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_range_text"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/attack_value_checkbox"
        app:layout_constraintStart_toEndOf="@id/attack_value_checkbox"
        app:layout_constraintTop_toBottomOf="@id/monster_type_spinner"/>

    <EditText
    android:id="@+id/atk_minumum"
    android:layout_width="48dp"
    android:layout_height="wrap_content"
        android:hint="@string/min"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        android:inputType="numberPassword"
        android:maxLength="5"
        app:layout_constraintBaseline_toBaselineOf="@id/just_the_word_to"
        app:layout_constraintStart_toEndOf="@id/attack_min_and_max_text"
        app:layout_constraintTop_toBottomOf="@id/monster_type_spinner"/>

    <TextView
        android:id="@+id/just_the_word_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@id/atk_minumum"
        app:layout_constraintTop_toBottomOf="@id/monster_type_spinner"/>

    <EditText
        android:id="@+id/atk_maximum"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:hint="@string/max"
        app:layout_constraintBaseline_toBaselineOf="@id/just_the_word_to"
        app:layout_constraintStart_toEndOf="@id/just_the_word_to"
        app:layout_constraintTop_toBottomOf="@id/monster_type_spinner"/>

    <TextView
        android:id="@+id/which_spell_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spell_type"
        app:layout_constraintTop_toBottomOf="@id/atk_maximum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spell_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/which_spell_type"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>

    <TextView
        android:id="@+id/which_trap_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trap_type"
        app:layout_constraintTop_toBottomOf="@id/spell_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/trap_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/which_trap_type"
        app:layout_constraintStart_toStartOf="parent">

    </Spinner>

    <Button
        android:id="@+id/apply_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>