<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".before_search_fragments.CardSearchFragment">

    <EditText
        android:id="@+id/user_card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_user_card_search"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/go_to_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/filter"/>
    <Button
        android:id="@+id/go_to_card_collection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_search_text"/>

</LinearLayout>